
-Fix for missing pairing volume data in charts, and 'volume percent up/down' in price alerts, for DeFi markets

-Misc UX

-------------------------------------------------------------------



-------------------------------------------------------------------
4.21.0:

-Default config revision

-Misc UX

-------------------------------------------------------------------



-------------------------------------------------------------------
4.21.1:

-Bug fix for DeFi liquidity pool asset names support (lowercase prefixes)

-Misc UX

-------------------------------------------------------------------



-------------------------------------------------------------------
4.22.0:

-Switched to using 'Generic' DeFi markets (whatever has most USD volume on DeFiPulse.com API), as the DeFiPulse.com API is unfortunately sketchy with platform-specific requests

-Cron plugin available (DISABLED BY DEFAULT in power user config) for detecting new Decred proposals, and detecting when voting starts on them

-Refactored cron plugin system

-Optimizations

-Misc. UX

-------------------------------------------------------------------



-------------------------------------------------------------------
4.22.1:

-Fixed error log duplicate entries

-Refactored plugin system (you can safely delete the DEPRECIATED 'cron-plugins' folder, to remove unused clutter)

-New reminder plugin functionality (unlimited reminders)

-Revised default config, including semantics for UX

-Misc. UX / bugfixes

-------------------------------------------------------------------



-------------------------------------------------------------------
4.22.2:

-"Crypto Value" of your entire portfolio in selected cryptocurrencies (on settings page)

-Code / documentation / content revisions and cleanup

-Misc. UX / bug fixes

-------------------------------------------------------------------









